--- a/stateful-services/notes.yml
+++ b/stateful-services/notes.yml
@@ -8,7 +8,7 @@ Running Stateful Services on Kubernetes:
       * nfs server is handled by a customized container
         - container makes directories available via NFS and stores data indise the container
           ! production it's recommended to run NFS as a dedicated server
-      * 'docker run d --net=host --privileged --name nfs-server katacoda/contained-nfs-server:centos7 \
+          * 'docker run -d --net=host --privileged --name nfs-server katacoda/contained-nfs-server:centos7 \
         /exports/data-0001 /exports/data-0002 '
       * nfs server exposes two dirs data-0001 and data-0002
     - Step 2 : Deploy Persistent Volume
@@ -70,4 +70,9 @@ Running Stateful Services on Kubernetes:
         - when data on the nfs share changes then the pod will read the newly updated data
           \' docker exec -it nfs-server bash -c "echo 'Hello NFS World' > /exports/data-0001/index.html" \'
           'curl $ip 'should return Hello NFS World
+      - Step 6: Recrate a Pod
+        * since remote nfs stores the data, if a pod or host went down data will still be available
+        * 'kubectl delete pod www'
+        * 'kubectl create -f pod-www2.yaml'
+        * 'ip=$(kubectl get pod www2 -o yaml | grep podIP | awk '{split($0,a,":"); print a[2]}'); curl $ip '
 
